@@ -284,10 +284,7 @@
 				<version>3.0.0</version>
 				<configuration>
 					<useSystemClassLoader>false</useSystemClassLoader>
-					<argLine>
-						--illegal-access=warn
-					</argLine>
-					<argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<argLine>@{argLine} -Xmx1024m --illegal-access=warn</argLine>
 					<includes>
 						<include>**/*Spec.java</include>
 						<include>**/*Test.java</include>
